parser bug fixes and in separate files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,5 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-file(GLOB SRC_FILES *.cpp) # collect all .c++ files into ${SRCFILES}
 
-add_executable(${PROJECT_NAME} ${SRC_FILES})
+add_executable(${PROJECT_NAME} main.cpp parser.cpp)
