change name to cornerstone-cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 
-set(PROJECT_NAME "cornerstone")
+set(PROJECT_NAME "cornerstone-cpp")
 project(${PROJECT_NAME})
 
 set(CMAKE_CXX_STANDARD 17)
