--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 
-add_executable(${PROJECT_NAME} main.cpp parser.cpp texp.cpp gen.cpp grammar.cpp)
+add_executable(${PROJECT_NAME} main.cpp parser.cpp texp.cpp gen.cpp grammar.cpp type.cpp)
