--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-list(APPEND src parser.cpp texp.cpp gen.cpp matcher.cpp grammar.cpp type.cpp)
+aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/lib src)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/lib)
 
 if (GTEST)
-  find_package(GTest REQUIRED)
-  enable_testing()
-  add_executable(${PROJECT_NAME}_test test.cpp ${src})
-  target_link_libraries(${PROJECT_NAME}_test PUBLIC gtest gtest_main)
+  ADD_SUBDIRECTORY(test)
 else (GTEST)
-  add_executable(${PROJECT_NAME} main.cpp ${src})
+  ADD_SUBDIRECTORY(main)
 endif (GTEST)
-
