init typer project

--- a/typer/CMakeLists.txt
+++ b/typer/CMakeLists.txt
@@ -1,3 +1,6 @@
-set(src "")
-aux_source_directory(${CMAKE_CURRENT_LIST_DIR} src)
-add_executable(typer ${src} ${CMAKE_SOURCE_DIR})
+set(typer_src "")
+aux_source_directory(${CMAKE_CURRENT_LIST_DIR} typer_src)
+add_executable(typer ${typer_src})
+
+include_directories(${PROJECT_ROOT}/lib)
+target_link_libraries(typer cornerstonelib_debug)
