runtime grammar from static grammar
- load grammar from file
- query grammar for productions
- CHECK_UNWRAP macro for unwrapping optional
- use string_view instead of enum type

TODO: investigate statically checking grammar usage
  based on grammar file contents.
  -> this will probably be delayed until cornerstone is bootstrapped

TODO: fix typer and test suite

TODO: grammar modification for passes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ project(${PROJECT_NAME})
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_EXTENSIONS ON)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors")
 
 add_subdirectory(lib)
 
@@ -18,4 +20,4 @@ else (GTEST)
 endif (GTEST)
 
 add_subdirectory(tester)
-add_subdirectory(typer)
+# add_subdirectory(typer)
