--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,9 @@
 aux_source_directory(${CMAKE_CURRENT_LIST_DIR} test_src)
 add_executable(${PROJECT_NAME}_test ${test_src})
 
+target_link_libraries(${PROJECT_NAME}_test PUBLIC cornerstonelib_debug)
+include_directories(${PROJECT_ROOT}/lib)
+
 # add gtest
 find_package(GTest REQUIRED)
 enable_testing()
